--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Chat UOL</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="header flex_box">
@@ -42,7 +46,10 @@
     </div>
 
 
-    <div class="input_box">EScreva aqui... </div>
+    <div class="input_box">
+      <input type="text" placeholder="Escreva aqui...">
+      <ion-icon name="paper-plane-outline"></ion-icon>
+    </div>
 
     <script src="./scripts/script.js"></script>
 
