--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
       <ion-icon name="paper-plane-outline"></ion-icon>
     </div>
 
-    <script src="./scripts/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
