versão com chat funcional

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 
     <div class="input_box">
-      <input type="text" placeholder="Escreva aqui...">
-      <ion-icon name="paper-plane-outline"></ion-icon>
+      <input class="caixa_texto" type="text" placeholder="Escreva aqui...">
+      <ion-icon name="paper-plane-outline" onclick="enviarMensagem()"></ion-icon>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
