--- a/index.html
+++ b/index.html
@@ -17,38 +17,14 @@
         <ion-icon name="people"></ion-icon>
     </div>
     <div class="conteudo">
-
-      <div class="mensagem-box login">
-        <div class="mensagem">
-          <span class="horario">(09:28:30)</span><span> <strong class="negrito">João</strong> entra na sala...</span> 
-        </div>
-      </div>
-
-      <div class="mensagem-box">
-        <div class="mensagem">
-          <span class="horario">(09:29:06)</span><span> <strong class="negrito">João</strong> para <strong class="negrito">Todos</strong>: Boa noite gente!</span> 
-        </div>
-      </div>
-
-      <div class="mensagem-box reservada">
-        <div class="mensagem">
-          <span class="horario">(09:30:25)</span><span> <strong class="negrito">João</strong> reservadamente para <strong class="negrito">Maria</strong>: Oi gatinha! quer tc?</span> 
-        </div>
-      </div>
-
-      <div class="mensagem-box login">
-        <div class="mensagem">
-          <span class="horario">(09:31:01)</span><span> <strong class="negrito">Maria</strong> saiu da sala...</span> 
-        </div>
-      </div>
-  
+        Conectando ...
 
     </div>
 
 
     <div class="input_box">
-      <input class="caixa_texto" type="text" placeholder="Escreva aqui...">
-      <ion-icon name="paper-plane-outline" onclick="enviarMensagem()"></ion-icon>
+      <input data-test ="input-messages" class="caixa_texto" type="text" placeholder="Escreva aqui...">
+      <ion-icon data-test ="send-message" name="paper-plane-outline" onclick="enviarMensagem()"></ion-icon>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
