versão corrigida do HUB 2

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 
     <div class="input_box">
-      <input data-test ="input-messages" class="caixa_texto" type="text" placeholder="Escreva aqui...">
-      <ion-icon data-test ="send-message" name="paper-plane-outline" onclick="enviarMensagem()"></ion-icon>
+      <input data-test ="input-message" class="caixa_texto" type="text" placeholder="Escreva aqui...">
+      <ion-icon data-test="send-message" name="paper-plane-outline" onclick="enviarMensagem()"></ion-icon>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
